<resources>
    <string name="kakao_app_key">9b8943a4447b46c4685812a2886ee0c2</string>
    <string name="kakao_scheme">kakao9b8943a4447b46c4685812a2886ee0c2</string>
    <string name="kakaolink_host">kakao9b8943a4447b46c4685812a2886ee0c2</string>
    <string name="app_name">공지도우미</string>
    <string name="_2020_03_18">2020.03.18</string>
    <string name="Department">예비군연대</string>
    <string name="Title">학생예비군(학부생, 대학원생) 전입신고 안내</string>
    <string name="developer">Developed by DeadLine</string>
    <string name="appName">강원대학교 공지도우미</string>
    <string name="testContent">테스트</string>
    <string name="check">Check</string>
    <string name="pinText">상단 핀 고정</string>
    <string name="bookmarkText">북마크 추가</string>
    <string name="majorFirstElement">·</string>
    <string name="backKey">backKey</string>
    <string name="FilterName">검색필터</string>
    <string name="FilterTopText">학과선택</string>
    <string name="mainSearchBarHint">검색할 키워드를 입력해주세요</string>
    <string name="kakaoText">카카오톡으로 보내기</string>

    <string-array name="college">
        <item>간호대학</item>
        <item>경영대학</item>
        <item>농업생명과학대학</item>
        <item>동물생명과학대학</item>
        <item>문화예술공과대학</item>
        <item>사범대학</item>
        <item>사회과학대학</item>
        <item>산림과학대학</item>
        <item>수의과대학</item>
        <item>약학대학</item>
        <item>의생명과학대학</item>
        <item>인문대학</item>
        <item>자연과학대학</item>
        <item>아이티대학</item>
        <item>기타학부</item>
        <item>주요공지사항</item>
    </string-array>

    <string-array name="간호대학">
        <item>간호학과</item>
    </string-array>
    <string-array name="경영대학">
        <item>경영학전공</item>
        <item>회계학전공</item>
        <item>경제학전공</item>
        <item>정보통계학전공</item>
        <item>관광경영학과</item>
        <item>국제무역학과</item>
    </string-array>
    <string-array name="농업생명과학대학">
        <item>농생명산업/시설농업학전공</item>
        <item>바이오시스템기계공학전공</item>
        <item>식품생명공학전공</item>
        <item>식물자원응용과학전공</item>
        <item>응용생물학전공</item>
        <item>원예과학전공</item>
        <item>농업자원경제학전공</item>
        <item>바이오자원환경학전공</item>
        <item>에코환경과학전공</item>
    </string-array>
    <string-array name="동물생명과학대학">
        <item>동물산업융합학과</item>
        <item>동물응용과학과</item>
        <item>동물자원과학과</item>
    </string-array>
    <string-array name="문화예술공과대학">
        <item>건축학과(5년제)</item>
        <item>건축공학전공</item>
        <item>토목공학전공</item>
        <item>환경공학전공</item>
        <item>기계의용공학전공</item>
        <item>메카트로닉스공학전공</item>
        <item>재료공학전공</item>
        <item>에너지자원공학전공</item>
        <item>산업공학전공</item>
        <item>화학공학전공</item>
        <item>생물공학전공</item>
        <item>디자인학과</item>
        <item>미술학과</item>
        <item>영상문화학과</item>
    </string-array>
    <string-array name="사범대학">
        <item>수학교육과</item>
        <item>역사교육과</item>
        <item>영어교육과</item>
    </string-array>
    <string-array name="사회과학대학">
        <item>행정학전공</item>
        <item>심리학전공</item>
        <item>신문방송학과</item>
        <item>정치외교학과</item>
    </string-array>
    <string-array name="산림과학대학">
        <item>산림경영학전공</item>
        <item>산림자원학전공</item>
        <item>산림소재공학전공</item>
        <item>산림환경보호학전공</item>
        <item>제지공학전공</item>
        <item>생태조경디자인학과</item>
    </string-array>
    <string-array name="수의과대학">
        <item>수의예/수의학과</item>
    </string-array>
    <string-array name="약학대학">
        <item>약학과</item>
    </string-array>
    <string-array name="의생명과학대학">
        <item>시스템면역과학전공</item>
        <item>의생명공학전공</item>
        <item>분자생명과학과</item>
        <item>생명건강공학과</item>
        <item>생물의소재공학과</item>
    </string-array>
    <string-array name="인문대학">
        <item>국어국문학전공</item>
        <item>영어영문학과</item>
        <item>독어독문학전공</item>
        <item>중어중문학전공</item>
        <item>일본학전공</item>
        <item>사학전공</item>
    </string-array>
    <string-array name="자연과학대학">
        <item>지구물리학전공</item>
        <item>지질학전공</item>
        <item>생화학전공</item>
        <item>화학전공</item>
        <item>생명과학과</item>
    </string-array>
    <string-array name="아이티대학">
        <item>전기전자공학과</item>
        <item>전자공학과</item>
        <item>컴퓨터공학과</item>
    </string-array>
    <string-array name="기타학부">
        <item>미래융합가상학과</item>
        <item>춘천자유전공학부/연계전공</item>
    </string-array>
    <string-array name="주요공지사항">
        <item>학사공지</item>
        <item>장학안내</item>
        <item>SW중심대학</item>
        <item>LINC+</item>
        <item>교육혁신원</item>
    </string-array>
</resources>
