<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@drawable/dia_round">

    <Button
        android:id="@+id/pinBtn"
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_btn_click"
        android:text="@string/pinText"
        android:textAlignment="textStart"
        android:textColor="@color/devTitleFontColor" />

    <Button
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:layout_below="@+id/pinBtn"
        android:id="@+id/bookBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_btn_click"
        android:fontFamily="@font/nanumsquare_acr"
        android:text="@string/bookmarkText"
        android:textAlignment="textStart"
        android:textColor="@color/devTitleFontColor"/>

    <Button
        android:paddingTop="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:id="@+id/linkBtn"
        android:layout_below="@+id/bookBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_btn_click"
        android:fontFamily="@font/nanumsquare_acr"
        android:text="@string/kakaoText"
        android:textAlignment="textStart"
        android:textColor="@color/devTitleFontColor" />
</RelativeLayout>